ops... wrong file

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,47 +1,2 @@
-<h1 align="center">Desafio 05# Calculadora </h1>
-
-
-<p align="center">
-Evento exclusivo e gratuito, promovido pela Rocketseat para ensino de tecnologias WEB.
-</p>
-
-<p align="center">
-  <a href="#-tecnologias">Tecnologias</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
-  <a href="#-projeto">Projeto</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
-  <a href="#-deploy">Deploy</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
-  <a href="#-licença">Licença</a>
-</p>
-
-<div align="center">
-
-![calculadora](./.github/Calculator_image.png)
-
-</div>
-<br>
-
-
-
-## 🚀 Tecnologias
-
-Esse projeto foi desenvolvido com as seguintes tecnologias:
-
-- HTML e CSS
-- Javascript
-- Git e Github
-- Figma
-
-## 💻 Projeto
-
-Calculadora 
-
-
-## Deploy 
-✅ [Github](https://leanddo.github.io/Calculadora-boracodar/)
-
-
-## ⚖ Licença
-
-Esse projeto está sob a licença MIT.
-
-
-Feito por Leandro Amaral 🐶
+# Auto detect text files and perform LF normalization
+* text=auto
